Correct method eating() in EvolutionSimulatorMap